# filetransferdaemon

./: .gitreview  CMakeLists.txt  Makefile  ftdconfig.ini
bubba-ftd/php/: sendipc.php
bubba-ftd/src/: CurlDownloader.cpp  CurlDownloader.h  DirWatcher.cpp  DirWatcher.h  Downloader.cpp  FtdApp.cpp  FtdConfig.h  MsgQueue.h  SocketFdDownloader.h  TorrentDownloader.cpp  TorrentDownloader.h  ftdclient.cpp
bubba-ftd/src/compat/: inotify.h
debian/: changelog  control  copyright  filetransferdaemon.dirs  filetransferdaemon.init  filetransferdaemon.postinst  filetransferdaemon.postrm  rules
patches/: bubba-ftd.patch  curl8.patch  libeutils.patch  systemd.patch
php/: ipc.php
src/: Commands.h  CurlDownloader.cpp  CurlDownloader.h  DirWatcher.cpp  DirWatcher.h  Downloader.cpp  Downloader.h  FtdApp.cpp  FtdApp.h  FtdConfig.cpp  MsgQueue.cpp  SocketFdDownloader.cpp  SocketFdDownloader.h  TorrentDownloader.cpp  TorrentDownloader.h  filetransferdaemon.cpp  upload.cpp
src/compat/: inotify-syscalls.h
static-libs/libeutils-0.7.39/: .gitreview  .svnignore  AUTHORS  CMakeLists.txt  changelog  config.h.cmake  libeutils.pc.cmake
static-libs/libeutils-0.7.39/libeutils/: AsyncWorker.cpp  AsyncWorker.h  CMakeLists.txt  Condition.cpp  Condition.h  DeferredWork.cpp  DeferredWork.h  ECGI.cpp  ECGI.h  EConfig.cpp  EConfig.h  EExcept.cpp  EExcept.h  Expect.cpp  Expect.h  FileUtils.cpp  FileUtils.h  FsTab.cpp  FsTab.h  Mutex.cpp  Mutex.h  NetClient.cpp  NetClient.h  NetDaemon.cpp  NetDaemon.h  PHPSession.cpp  PHPSession.h  POpt.cpp  POpt.h  Process.cpp  Process.h  Regex.cpp  Regex.h  Serial.cpp  Serial.h  Services.cpp  Services.h  SimpleCfg.cpp  SimpleCfg.h  Socket.cpp  (+17 more)
static-libs/libeutils-0.7.39/libeutils/json/: json_reader.cpp  json_value.cpp  json_valueiterator.inl  json_writer.cpp
static-libs/libeutils-0.7.39/libeutils/json/include/json/: reader.h  value.h
static-libs/libeutils-0.7.39/test/: CGITest.cpp  CMakeLists.txt  ProcessTest.cpp  test_main.cpp
static-libs/libsigc++-2.4.1/: ChangeLog  Makefile.in  NEWS  README  TODO  aclocal.m4  configure
static-libs/libsigc++-2.4.1/MSVC_Net2005/: sigc.rc
static-libs/libsigc++-2.4.1/MSVC_Net2010/: sigc.rc
static-libs/libsigc++-2.4.1/docs/: Makefile.in
static-libs/libsigc++-2.4.1/docs/reference/: libsigc++-2.0.devhelp2  libsigc++-2.0.tag
static-libs/libsigc++-2.4.1/docs/reference/html/: annotated.html  classes.html  classsigc_1_1bound__argument-members.html  classsigc_1_1bound__argument.html  classsigc_1_1bound__argument_3_01const__reference__wrapper_3_01T__wrapped_01_4_01_4-members.html  classsigc_1_1bound__argument_3_01const__reference__wrapper_3_01T__wrapped_01_4_01_4.html  classsigc_1_1bound__argument_3_01reference__wrapper_3_01T__wrapped_01_4_01_4-members.html  classsigc_1_1bound__argument_3_01reference__wrapper_3_01T__wrapped_01_4_01_4.html  classsigc_1_1bound__const__mem__functor0-members.html  classsigc_1_1bound__const__mem__functor0.html  classsigc_1_1bound__const__mem__functor1-members.html  classsigc_1_1bound__const__mem__functor1.html  classsigc_1_1bound__const__mem__functor2-members.html  classsigc_1_1bound__const__mem__functor2.html  classsigc_1_1bound__const__mem__functor3-members.html  classsigc_1_1bound__const__mem__functor3.html  classsigc_1_1bound__const__mem__functor4-members.html  classsigc_1_1bound__const__mem__functor4.html  classsigc_1_1bound__const__mem__functor5-members.html  classsigc_1_1bound__const__mem__functor5.html  classsigc_1_1bound__const__mem__functor6-members.html  classsigc_1_1bound__const__mem__functor6.html  classsigc_1_1bound__const__mem__functor7-members.html  classsigc_1_1bound__const__mem__functor7.html  classsigc_1_1bound__const__volatile__mem__functor0-members.html  classsigc_1_1bound__const__volatile__mem__functor0.html  classsigc_1_1bound__const__volatile__mem__functor1-members.html  classsigc_1_1bound__const__volatile__mem__functor1.html  classsigc_1_1bound__const__volatile__mem__functor2-members.html  classsigc_1_1bound__const__volatile__mem__functor2.html  classsigc_1_1bound__const__volatile__mem__functor3-members.html  classsigc_1_1bound__const__volatile__mem__functor3.html  classsigc_1_1bound__const__volatile__mem__functor4-members.html  classsigc_1_1bound__const__volatile__mem__functor4.html  classsigc_1_1bound__const__volatile__mem__functor5-members.html  classsigc_1_1bound__const__volatile__mem__functor5.html  classsigc_1_1bound__const__volatile__mem__functor6-members.html  classsigc_1_1bound__const__volatile__mem__functor6.html  classsigc_1_1bound__const__volatile__mem__functor7-members.html  classsigc_1_1bound__const__volatile__mem__functor7.html  (+374 more)
static-libs/libsigc++-2.4.1/examples/: Makefile.in  hello_world.cc  member_method.cc
static-libs/libsigc++-2.4.1/sigc++/: Makefile.in  connection.cc  filelist.am  sigc++.h  signal.h  signal_base.cc  signal_base.h  trackable.cc  trackable.h
static-libs/libsigc++-2.4.1/sigc++/adaptors/: deduce_result_type.h  track_obj.h
static-libs/libsigc++-2.4.1/sigc++/adaptors/lambda/: group.h  select.h
static-libs/libsigc++-2.4.1/sigc++/adaptors/lambda/macros/: lambda.cc.m4  select.h.m4
static-libs/libsigc++-2.4.1/sigc++/adaptors/macros/: deduce_result_type.h.m4
static-libs/libsigc++-2.4.1/sigc++/functors/: ptr_fun.h  slot.h  slot_base.cc  slot_base.h
static-libs/libsigc++-2.4.1/sigc++/functors/macros/: functor_trait.h.m4  ptr_fun.h.m4  slot.h.m4
static-libs/libsigc++-2.4.1/sigc++/macros/: class_slot.h.m4  hide.h.m4  method_slot.h.m4  object_slot.h.m4  retype.h.m4  signal.h.m4  slot.h.m4  template.macros.m4
static-libs/libsigc++-2.4.1/tests/: Makefile.in
